--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,12 @@
 /* write your css here */
+@tailwind base;
+@tailwind components;
+@tailwind utilites;
+
+html,body{
+    overflow-x:hidden 
+}
+
+.homepage_bg{
+    background-image: url('../src/assets/Images/bghome.svg');
+}
